--- a/notebook/gaussian.ipynb
+++ b/notebook/gaussian.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Author: Walter Nam\n",
     "import sys\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sympy import Matrix\n",
+    "from sympy import init_printing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +44,9 @@
     "                for j in range(i,n):\n",
     "                    A[k,j] = A[i,j] - A[k,j] * factor\n",
     "                b[k] = b[i] - b[k] * factor\n",
-    "        print(A)\n",
-    "        print(b)\n",
+    "        #print(A)\n",
+    "        #print(b)\n",
+    "        #Backward Substitution\n",
     "        x[n - 1] = b[n - 1] / A[n - 1, n - 1]\n",
     "        for i in range(n - 2, -1, -1):\n",
     "            sum_ax = 0\n",
@@ -57,7 +60,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<module 'sympy' from 'C:\\\\Users\\\\aircr\\\\Anaconda3\\\\lib\\\\site-packages\\\\sympy\\\\__init__.py'>,\n",
+       " None)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = Matrix([[1, -1, 2,-1],\n",
+    "    [2,-2, 3, -3],\n",
+    "    [1, 1, 1, 0],\n",
+    "    [1, -1, 4, 3]])\n",
+    "sp,init_printing()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -66,11 +94,6 @@
      "text": [
       "Numpy solution\n",
       "[-7.  3.  2.  2.]\n",
-      "[[ 2. -2.  3. -3.]\n",
-      " [ 0. -4.  1. -3.]\n",
-      " [ 0.  0. -5. -9.]\n",
-      " [ 0.  0.  0. -4.]]\n",
-      "[-20. -16. -28.  -8.]\n",
       "Solution of the system\n",
       "[-7.  3.  2.  2.]\n",
       "None\n"
